--- a/.env
+++ b/.env
@@ -4,5 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://baeldung:baeldung@localhost:5432/mydb?schema=public"
-SESSION_PASSWORD="MINHASENHA"
+
+PGSQL_HOST= 127.0.0.1
+PGSQL_PORT= 5432
+PGSQL_DATABASE= postgres
+PGSQL_USER= baeldung
+PGSQL_PASSWORD= baeldung
