--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.2.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "nodemon": "^2.0.22",
+    "pg": "^8.10.0",
     "postcss": "8.4.21",
     "prisma": "^4.12.0",
     "react": "18.2.0",
