--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "formik": "^2.2.9",
     "next": "13.3.0",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "postcss": "8.4.21",
     "prisma": "^4.12.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1"
   }
