--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@
 PGSQL_HOST= 127.0.0.1
 PGSQL_PORT= 5432
 PGSQL_DATABASE= postgres
-PGSQL_USER= baeldung
-PGSQL_PASSWORD= baeldung
+PGSQL_USER= postgres
+PGSQL_PASSWORD= postgres
